# magellantools

./: ARCDR.py  ARCDRellipse.ipynb  ARCDRproj.py  ARCDRtracks.py  PDCtrack_emissivity.ipynb  RDF.py  README.md  adf00376.3  adf00376.lbl  adf01467.2  adf01467.lbl  arcdr2csv.py  arcdr2gpkg.py  ellipseFootprintExtract.ipynb  pyproject.toml  readARCDR_example.ipynb  readRDF_example.ipynb  requirements.txt
docs/source/: conf.py  ex_cliconvert.rst  ex_rdr2csv.rst  index.rst
docs/source/notebook/: ex_parseadf.ipynb  ex_parserdf.ipynb  rdf01761.1  rdf01761.lbl
notebooks/: ARCDR_Flag_Parsing.ipynb  ARCDRellipse.ipynb  PDCtrack_emissivity.ipynb  ellipseFootprintExtract.ipynb  footprintQuery.ipynb  readARCDR_example.ipynb
pds-geosciences.wustl.edu/mgn/mgn-v-rdrs-5-cdr-alt-rad-v1/mg_2015/38613880/: rdf03870.1  rdf03870.lbl  rdf03871.1  rdf03871.lbl  rdf03872.1  rdf03873.lbl  rdf03874.1  rdf03874.lbl  rdf03875.lbl  rdf03877.1  rdf03878.1
pds-geosciences.wustl.edu/mgn/mgn-v-rdrs-5-cdr-alt-rad-v1/mg_2016/41614180/: rdf04170.1  rdf04171.1  rdf04173.lbl  rdf04175.lbl  rdf04176.1  rdf04178.1  rdf04178.lbl
pds-geosciences.wustl.edu/mgn/mgn-v-rdrs-5-cdr-alt-rad-v1/mg_2016/41814200/: rdf04181.1  rdf04182.1  rdf04182.lbl  rdf04183.1  rdf04183.lbl  rdf04186.lbl  rdf04188.1  rdf04189.lbl  rdf04190.lbl  rdf04191.1  rdf04192.lbl  rdf04193.1  rdf04194.lbl  rdf04195.1  rdf04195.lbl  (+6 more)
src/: ARCDR.py
src/magellantools/: ALTEDR.py  ARCDR.py
src/magellantools/script/: arcdr2csv.py  arcdr2gpkg.py  arcdr2table.py
src/script/: ARCDRproj.py  ARCDRtracks.py  arcdr2csv.py  arcdr2gpkg.py
(+211 files in other folders)
